  * top: avoids keystroke induced '%Cpu' distortions
  * top: includes VM (guest) tics in 'system' overhead     issue #274
  * top: includes VM (guest) tics with '!' toggle          merge #179
  * top: lessen summary cpu distortions on first display   merge #180
  * top: better backspace handling wtth line edits         issue #278
  * w: Fix musl UT_HOSTSIZE issue

procps-ng-4.0.3
---------------
  * library
    Only changes were in copyright headers and tests
  * docs: Don't install English manpages twice
  * pgrep: Add -H match on userspace signal handler        merge #165
  * pgrep: make --terminal respect other criteria
  * ps: c flag shows command name again                    Debian #1026326
  * ps.1: Match drs description from top.1                 merge #156
  * skill: Match on -p again                               Debian #1025915
  * top: E/P-core toggle ('5' key) added to help
  * vmstat: Referesh memory statistics                     Debian #1027963
  * vmstat: Fix initial si,so,bi,bo,in & cs values         issue #15
                                                           Debian #668580
  * vmstat: Fix conversion errors due to precision         merge #75
  * w: Add --pids option                                   merge #159
  * watch: Pass through beep                               issue #104
  * watch: -r option to not re-exec on SIGWINCH            merge #125
  * watch: find eol with --no-linewrap                     merge #157

procps-ng-4.0.2
---------------
  * library revision - 0:1:0
    Handle absent 'core_id' in /proc/cpuinfo
  * w: Show time with D_TIME_BITS=64 on 32bit env          issue #256

procps-ng-4.0.1
---------------
  * library
    Re-add elogind support                                 merge #151
    Used memory is Total - Available
    Renaming, it is now libproc2
  * free: Use --kilo when only specifying --si             merge #163
  * pgrep: Add -A to ignore ancestors                      merge #160