@@ -14,6 +14,7 @@ procps-ng-NEXT
   * top: includes VM (guest) tics with '!' toggle          merge #179
   * top: lessen summary cpu distortions on first display   merge #180
   * top: better backspace handling wtth line edits         issue #278
+  * vmstat: Print guest time in non-wide mode
   * w: Fix musl UT_HOSTSIZE issue
 
 procps-ng-4.0.3
